@@ -39,6 +39,10 @@
      [channels.c channels.h session.c]
      switch uid when cleaning up tmp files and sockets; reported by 
      zen-parse@gmx.net on bugtraq
+   - markus@cvs.openbsd.org 2001/06/04 23:07:21
+     [clientloop.c serverloop.c sshd.c]
+     set flags in the signal handlers, do real work in the main loop, 
+     ok provos@
 
 20010606
  - OpenBSD CVS Sync
@@ -5550,4 +5554,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1258 2001/06/09 01:20:06 mouring Exp $
+$Id: ChangeLog,v 1.1259 2001/06/09 01:27:31 mouring Exp $
